Promisify and support Node.js >=4

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "sindresorhus.com"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
     "test": "mocha"
@@ -32,6 +32,9 @@
     "fd",
     "open"
   ],
+  "dependencies": {
+    "pify": "^2.3.0"
+  },
   "devDependencies": {
     "mocha": "*"
   }
