ES2015ify and use promises (#3)
* Promisify and support Node.js >=4

* Add XO and AVA

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "url": "sindresorhus.com"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "xo && ava"
   },
   "files": [
     "index.js"
@@ -32,7 +32,14 @@
     "fd",
     "open"
   ],
+  "dependencies": {
+    "pify": "^2.3.0"
+  },
   "devDependencies": {
-    "mocha": "*"
+    "ava": "*",
+    "xo": "*"
+  },
+  "xo": {
+    "esnext": true
   }
 }
