Set xo rule `no-new-buffer` to `warn` level
Otherwise the build will fail due to `xo` an error.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "xo": "*"
   },
   "xo": {
-    "esnext": true
+    "esnext": true,
+    "rules": {
+      "unicorn/no-new-buffer": "warn"
+    }
   }
 }
