Always use `Buffer.alloc`
It was backported to Node.js 4, so we can use it on all Node.js versions
>= 4.

--- a/package.json
+++ b/package.json
@@ -40,9 +40,6 @@
     "xo": "*"
   },
   "xo": {
-    "esnext": true,
-    "rules": {
-      "unicorn/no-new-buffer": "warn"
-    }
+    "esnext": true
   }
 }
