Use native Buffer after dropping Node 4

--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "open"
   ],
   "dependencies": {
-    "pify": "^3.0.0",
-    "safe-buffer": "^5.1.1"
+    "pify": "^3.0.0"
   },
   "devDependencies": {
     "ava": "*",
