Drop support for Node.js 4 (#10)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "sindresorhus.com"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=6"
   },
   "scripts": {
     "test": "xo && ava"
@@ -33,8 +33,7 @@
     "open"
   ],
   "dependencies": {
-    "pify": "^3.0.0",
-    "safe-buffer": "^5.1.1"
+    "pify": "^3.0.0"
   },
   "devDependencies": {
     "ava": "*",
