Delegate file descriptor mgmt to with-open-file

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "open"
   ],
   "dependencies": {
-    "pify": "^3.0.0"
+    "pify": "^3.0.0",
+    "with-open-file": "^0.1.3"
   },
   "devDependencies": {
     "ava": "*",
