--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "open"
   ],
   "dependencies": {
-    "pify": "^3.0.0"
+    "pify": "^3.0.0",
+    "with-open-file": "^0.1.3"
   },
   "devDependencies": {
     "ava": "*",
+    "sinon": "^6.1.5",
     "xo": "*"
   }
 }
