--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
 		"node": ">=6"
 	},
 	"scripts": {
-		"test": "xo && ava"
+		"test": "xo && ava && tsd-check"
 	},
 	"files": [
-		"index.js"
+		"index.js",
+		"index.d.ts"
 	],
 	"keywords": [
 		"read",
@@ -37,8 +38,10 @@
 		"with-open-file": "^0.1.3"
 	},
 	"devDependencies": {
-		"ava": "*",
-		"sinon": "^6.1.5",
-		"xo": "*"
+		"@types/node": "^11.10.4",
+		"ava": "^1.3.1",
+		"sinon": "^7.2.7",
+		"tsd-check": "^0.3.0",
+		"xo": "^0.24.0"
 	}
 }
