--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"node": ">=6"
 	},
 	"scripts": {
-		"test": "xo && ava && tsd-check"
+		"test": "xo && ava && tsd"
 	},
 	"files": [
 		"index.js",
@@ -35,13 +35,13 @@
 	],
 	"dependencies": {
 		"pify": "^4.0.1",
-		"with-open-file": "^0.1.5"
+		"with-open-file": "^0.1.6"
 	},
 	"devDependencies": {
-		"@types/node": "^11.10.4",
-		"ava": "^1.3.1",
-		"sinon": "^7.2.7",
-		"tsd-check": "^0.3.0",
+		"@types/node": "^11.12.2",
+		"ava": "^1.4.1",
+		"sinon": "^7.3.1",
+		"tsd": "^0.7.1",
 		"xo": "^0.24.0"
 	}
 }
