--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
 	"description": "Read a chunk from a file",
 	"license": "MIT",
 	"repository": "sindresorhus/read-chunk",
+	"funding": "https://github.com/sponsors/sindresorhus",
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
-		"url": "sindresorhus.com"
+		"url": "https://sindresorhus.com"
 	},
+	"type": "module",
+	"exports": "./index.js",
 	"engines": {
-		"node": ">=6"
+		"node": "^12.20.0 || ^14.13.1 || >=16.0.0"
 	},
 	"scripts": {
 		"test": "xo && ava && tsd"
@@ -34,14 +37,13 @@
 		"open"
 	],
 	"dependencies": {
-		"pify": "^4.0.1",
-		"with-open-file": "^0.1.6"
+		"pify": "^5.0.0"
 	},
 	"devDependencies": {
-		"@types/node": "^11.12.2",
-		"ava": "^1.4.1",
-		"sinon": "^7.3.1",
-		"tsd": "^0.7.1",
-		"xo": "^0.24.0"
+		"@types/node": "^16.4.13",
+		"ava": "^3.15.0",
+		"sinon": "^11.1.2",
+		"tsd": "^0.17.0",
+		"xo": "^0.44.0"
 	}
 }
