--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
 	},
 	"devDependencies": {
 		"@types/node": "^16.4.13",
-		"ava": "^3.15.0",
+		"ava": "^6.1.3",
 		"sinon": "^11.1.2",
 		"tsd": "^0.17.0",
+		"uint8array-extras": "^1.1.0",
 		"xo": "^0.44.0"
 	}
 }
