--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
 		"url": "https://sindresorhus.com"
 	},
 	"type": "module",
-	"exports": "./index.js",
+	"exports": {
+		"types": "./index.d.ts",
+		"default": "./index.js"
+	},
+	"sideEffects": false,
 	"engines": {
-		"node": ">=16.0.0"
+		"node": ">=18"
 	},
 	"scripts": {
 		"test": "xo && ava && tsd"
@@ -37,10 +41,9 @@
 		"open"
 	],
 	"devDependencies": {
-		"@types/node": "^16.4.13",
 		"ava": "^6.1.3",
-		"sinon": "^11.1.2",
-		"tsd": "^0.17.0",
+		"sinon": "^18.0.0",
+		"tsd": "^0.31.1",
 		"uint8array-extras": "^1.1.0",
 		"xo": "^0.58.0"
 	}
